# scripts

./: .gitignore  .gitmodules  Cargo.toml  DEPLOYMENT_PLAN.md  MULTITOOL_SKETCH.md  README.md  RUST_REWRITE_PLAN.md  agents_zip  copy-feed-files.go  go.mod  key.agents_.md  main  package.json  splat.sh  update_commit.sh
actions/: ai_key_check.yaml  lint.yaml  npm-publish.yaml  rotate_key.yaml  rust-publish.yaml  test.yaml
crates/agents-zip/: Cargo.toml
crates/agents-zip/src/: main.rs
crates/aiscan/: Cargo.toml
crates/aiscan/src/: lib.rs
crates/bump-npm-version/: Cargo.toml
crates/bump-npm-version/src/: main.rs
crates/check-ai-key/: Cargo.toml
crates/check-ai-key/src/: halt_prompt.md  main.rs
crates/env-fake/: Cargo.toml
crates/env-fake/src/: fake_ai.rs  fake_file.rs  fake_git.rs  fake_github.rs  fake_network.rs  lib.rs
crates/env-real/: Cargo.toml
crates/env-real/src/: gh_cli_github.rs  lib.rs  os_file.rs  process_git.rs  reqwest_network.rs
crates/env-traits/: Cargo.toml
crates/env-traits/src/: lib.rs
crates/forfiles/: Cargo.toml
crates/forfiles/src/: main.rs
crates/inject-key/: Cargo.toml
crates/inject-key/src/: main.rs
crates/keyguard/: Cargo.toml
crates/pkgjson/: Cargo.toml
crates/pkgjson/src/: lib.rs
crates/repoutils/: Cargo.toml
crates/repoutils/src/: lib.rs
crates/scaffold-repo/: Cargo.toml
crates/scaffold-repo/src/: main.rs
pkg/aiscan/: aiscan.go  heuristic.go  http.go
pkg/keyguard/: keyguard.go
pkg/pkgjson/: pkgjson.go
pkg/repoutils/: repoutils.go
tools/: README.md
tools/agents_zip/: .gitignore  main.go
tools/bump_npm_version/: main.go
tools/check_ai_key/: main.go
tools/forfiles/: forfiles.go  go.mod
tools/git/: addignores.sh  codeall.sh  commitall2.sh  commitandpushall.sh  fetch-repos-gh.sh  fetch-repos.sh  fmtallcargo.sh  ocrall.sh  pull.sh  pullall.sh  pushall.sh  sortallignores.sh  splatall.sh  updateallcargo.sh  updateallcargoplus.sh
tools/inject_key/: main.go
tools/scaffold_repo/: main.go
