# AIKEY-l4qkxonqry2b4gj7bsrkqpryiy
[package]
name        = "aiscan"
version.workspace = true
edition.workspace = true
description = "AI-content detection: heuristic, HTTP, and noop scanners"

[dependencies]
env-traits = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
env-fake = { workspace = true }
