# AIKEY-l4qkxonqry2b4gj7bsrkqpryiy
[package]
name        = "env-real"
version.workspace = true
edition.workspace = true
description = "Real (production) implementations of the env-traits"

[dependencies]
env-traits = { workspace = true }
anyhow     = { workspace = true }
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
walkdir    = { workspace = true }
