# AIKEY-l4qkxonqry2b4gj7bsrkqpryiy
[package]
name        = "forfiles"
version.workspace = true
edition.workspace = true
description = "Read lines from stdin, run a command per line in parallel"

[[bin]]
name = "forfiles"
path = "src/main.rs"

[dependencies]
tokio  = { workspace = true }
anyhow = { workspace = true }
