# AIKEY-l4qkxonqry2b4gj7bsrkqpryiy
[package]
name        = "keyguard"
version.workspace = true
edition.workspace = true
description = "AI submission key management: read, resolve anchor commit, scan files"

[dependencies]
env-traits = { workspace = true }
anyhow     = { workspace = true }
regex      = { workspace = true }

[dev-dependencies]
env-fake = { workspace = true }
